--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "comfyui-wd14-tagger"
 description = "A ComfyUI extension allowing the interrogation of booru tags from images."
 version = "1.0.2"
 license = { file = "LICENSE" }
-dependencies = ["onnxruntime-gpu"]
+dependencies = ["onnxruntime"]
 
 [project.urls]
 Repository = "https://github.com/pythongosssss/ComfyUI-WD14-Tagger"
